# cpp-sandbox

./: .gitignore  CMakeLists.txt  Entity.cpp  Entity.h  Log.cpp  Log.h  Player.cpp  Player.h  README.md  main.cpp  makefile  note.txt  staticExample.cpp
Source/: Course.cpp  Course.h  Student.cpp  Student.h  main.cpp
source/: Entity.cpp  Entity.h  Log.cpp  main.cpp
